added changes to css and html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="user">
                     <img src="icons/user-circle.png" alt="user" class="avatar-m">
                     <p><a href="#">Add an avatar</a></p>
-                    <h2>John Doe</h2>
+                    <h2>John Doe was here</h2>
                 </div>
             </div>
             <div class="right">
